--- a/src/app/core-component/dashboard/dashboard.component.html
+++ b/src/app/core-component/dashboard/dashboard.component.html
@@ -6,12 +6,7 @@
       </div>
       <div class="dash-widgetcontent">
         <h5>
-          $<span
-            class="counters counter-value"
-            [CountTo]="307144.0"
-            [from]="0"
-            [duration]="1"
-          >
+          $<span class="counters counter-value" [CountTo]="307144.0" [from]="0" [duration]="1">
           </span>
         </h5>
         <h6>Total Purchase Due</h6>
@@ -25,12 +20,7 @@
       </div>
       <div class="dash-widgetcontent">
         <h5>
-          $<span
-            class="counters"
-            [CountTo]="4385.0"
-            [from]="0"
-            [duration]="1"
-          ></span>
+          $<span class="counters" [CountTo]="4385.0" [from]="0" [duration]="1"></span>
         </h5>
         <h6>Total Sales Due</h6>
       </div>
@@ -43,12 +33,7 @@
       </div>
       <div class="dash-widgetcontent">
         <h5>
-          $<span
-            class="counters"
-            [CountTo]="385656.5"
-            [from]="0"
-            [duration]="1"
-          ></span>
+          $<span class="counters" [CountTo]="385656.5" [from]="0" [duration]="1"></span>
         </h5>
         <h6>Total Sale Amount</h6>
       </div>
@@ -61,12 +46,7 @@
       </div>
       <div class="dash-widgetcontent">
         <h5>
-          $<span
-            class="counters"
-            [CountTo]="40000.0"
-            [from]="0"
-            [duration]="1"
-          ></span>
+          $<span class="counters" [CountTo]="40000.0" [from]="0" [duration]="1"></span>
         </h5>
         <h6>Total Sale Amount</h6>
       </div>
@@ -122,9 +102,7 @@
 <div class="row">
   <div class="col-lg-7 col-sm-12 col-12 d-flex">
     <div class="card flex-fill">
-      <div
-        class="card-header pb-0 d-flex justify-content-between align-items-center"
-      >
+      <div class="card-header pb-0 d-flex justify-content-between align-items-center">
         <h5 class="card-title mb-0">Purchase & Sales</h5>
         <div class="graph-sets">
           <ul>
@@ -136,13 +114,8 @@
             </li>
           </ul>
           <div class="dropdown">
-            <button
-              class="btn btn-white btn-sm dropdown-toggle"
-              type="button"
-              id="dropdownMenuButton"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
+            <button class="btn btn-white btn-sm dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-bs-toggle="dropdown" aria-expanded="false">
               2022
               <img src="assets/img/icons/dropdown.svg" alt="img" class="ms-2" />
             </button>
@@ -162,58 +135,35 @@
       </div>
       <div class="card-body">
         <div id="chart">
-          <apx-chart
-            [series]="chartOptions.series"
-            [chart]="chartOptions.chart"
-            [dataLabels]="chartOptions.dataLabels"
-            [plotOptions]="chartOptions.plotOptions"
-            [yaxis]="chartOptions.yaxis"
-            [xaxis]="chartOptions.xaxis"
-            [colors]="chartOptions.colors"
-          ></apx-chart>
+          <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [dataLabels]="chartOptions.dataLabels"
+            [plotOptions]="chartOptions.plotOptions" [yaxis]="chartOptions.yaxis" [xaxis]="chartOptions.xaxis"
+            [colors]="chartOptions.colors"></apx-chart>
         </div>
       </div>
     </div>
   </div>
   <div class="col-lg-5 col-sm-12 col-12 d-flex">
     <div class="card flex-fill">
-      <div
-        class="card-header pb-0 d-flex justify-content-between align-items-center"
-      >
+      <div class="card-header pb-0 d-flex justify-content-between align-items-center">
         <h4 class="card-title mb-0">Recently Added Products</h4>
         <div class="dropdown">
-          <a
-            href="javascript:void(0);"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            class="dropset"
-          >
+          <a href="javascript:void(0);" data-bs-toggle="dropdown" aria-expanded="false" class="dropset">
             <i class="fa fa-ellipsis-v"></i>
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li>
-              <a [routerLink]="routes.productList" class="dropdown-item"
-                >Product List</a
-              >
+              <a [routerLink]="routes.listaProducto" class="dropdown-item">Product List</a>
             </li>
             <li>
-              <a [routerLink]="routes.addProduct" class="dropdown-item"
-                >Product Add</a
-              >
+              <a [routerLink]="routes.addProduct" class="dropdown-item">Product Add</a>
             </li>
           </ul>
         </div>
       </div>
       <div class="card-body">
         <div class="table-responsive dataview">
-          <table
-            (matSortChange)="sortRecentlyAddedProducts($event)"
-            matSort
-            matSortActive="Sno"
-            matSortDirection="asc"
-            matSortDisableClear
-            class="table datatable"
-          >
+          <table (matSortChange)="sortRecentlyAddedProducts($event)" matSort matSortActive="Sno" matSortDirection="asc"
+            matSortDisableClear class="table datatable">
             <thead>
               <tr>
                 <th mat-sort-header="Sno">Sno</th>
@@ -225,12 +175,12 @@
               <tr *ngFor="let dashboard of recentlyAddedProducts">
                 <td>{{ dashboard.Sno }}</td>
                 <td class="productimgname">
-                  <a [routerLink]="routes.productList" class="product-img">
+                  <a [routerLink]="routes.listaProducto" class="product-img">
                     <img [src]="dashboard.img" alt="product" />
                   </a>
-                  <a [routerLink]="routes.productList">{{
+                  <a [routerLink]="routes.listaProducto">{{
                     dashboard.Products
-                  }}</a>
+                    }}</a>
                 </td>
                 <td>{{ dashboard.Price | currency : currency }}</td>
               </tr>
@@ -245,14 +195,8 @@
   <div class="card-body">
     <h4 class="card-title">Expired Products</h4>
     <div class="table-responsive dataview">
-      <table
-        (matSortChange)="sortExpiredProducts($event)"
-        matSort
-        matSortActive="Sno"
-        matSortDirection="asc"
-        matSortDisableClear
-        class="table"
-      >
+      <table (matSortChange)="sortExpiredProducts($event)" matSort matSortActive="Sno" matSortDirection="asc"
+        matSortDisableClear class="table">
         <thead>
           <tr>
             <th mat-sort-header="Sno">SNo</th>
@@ -270,12 +214,12 @@
               <a href="javascript:void(0);">{{ dashboard2.ProductCode }}</a>
             </td>
             <td class="productimgname">
-              <a class="product-img" [routerLink]="routes.productList">
+              <a class="product-img" [routerLink]="routes.listaProducto">
                 <img [src]="dashboard2.img" alt="product" />
               </a>
-              <a [routerLink]="routes.productList">{{
+              <a [routerLink]="routes.listaProducto">{{
                 dashboard2.ProductName
-              }}</a>
+                }}</a>
             </td>
             <td>{{ dashboard2.BrandName }}</td>
             <td>{{ dashboard2.CategoryName }}</td>
