--- a/src/app/core-component/product/product-details/product-details.component.html
+++ b/src/app/core-component/product/product-details/product-details.component.html
@@ -1,7 +1,7 @@
 <div class="page-header">
   <div class="page-title">
-    <h4>Product Details</h4>
-    <h6>Full details of a product</h6>
+    <h4>Detalles del Producto</h4>
+    <h6>Detalle del Product</h6>
   </div>
 </div>
 <!-- /add -->
@@ -9,68 +9,46 @@
   <div class="col-lg-8 col-sm-12">
     <div class="card">
       <div class="card-body">
-        <div class="bar-code-view">
+        <!-- <div class="bar-code-view">
           <img src="assets/img/barcode1.png" alt="barcode" />
           <a class="printimg">
             <img src="assets/img/icons/printer.svg" alt="print" />
           </a>
-        </div>
+        </div> -->
         <div class="productdetails">
           <ul class="product-bar">
             <li>
-              <h4>Product</h4>
-              <h6>Macbook pro</h6>
+              <h4>Codigo</h4>
+              <h6>{{producto?.codigo}}</h6>
             </li>
             <li>
-              <h4>Category</h4>
-              <h6>Computers</h6>
+              <h4>Nombre</h4>
+              <h6>{{producto?.nombre}}</h6>
             </li>
             <li>
-              <h4>Sub Category</h4>
-              <h6>None</h6>
+              <h4>Marca</h4>
+              <h6>{{producto?.marca}}</h6>
             </li>
             <li>
-              <h4>Brand</h4>
-              <h6>None</h6>
+              <h4>Unidad</h4>
+              <h6>{{producto?.unidad}}</h6>
             </li>
             <li>
-              <h4>Unit</h4>
-              <h6>Piece</h6>
+              <h4>Valor Ultima Compra</h4>
+              <h6>{{producto?.valorUltimaCompra}}</h6>
             </li>
             <li>
-              <h4>SKU</h4>
-              <h6>PT0001</h6>
+              <h4>Fecha Ultima Compra</h4>
+              <h6>{{producto?.fechaUltimaCompra |date}}</h6>
             </li>
             <li>
-              <h4>Minimum Qty</h4>
-              <h6>5</h6>
+              <h4>pvpA</h4>
+              <h6>{{producto?.pvpA}}</h6>
             </li>
             <li>
-              <h4>Quantity</h4>
-              <h6>50</h6>
-            </li>
-            <li>
-              <h4>Tax</h4>
-              <h6>0.00 %</h6>
-            </li>
-            <li>
-              <h4>Discount Type</h4>
-              <h6>Percentage</h6>
-            </li>
-            <li>
-              <h4>Price</h4>
-              <h6>1500.00</h6>
-            </li>
-            <li>
-              <h4>Status</h4>
-              <h6>Active</h6>
-            </li>
-            <li>
-              <h4>Description</h4>
+              <h4>Descripcion</h4>
               <h6>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s,
+                {{producto?.comentario}}
               </h6>
             </li>
           </ul>
