--- a/src/app/core-component/people/addcustomer/addcustomer.component.html
+++ b/src/app/core-component/people/addcustomer/addcustomer.component.html
@@ -8,16 +8,17 @@
 <form [formGroup]="formularioCliente">
     <div class="card">
         <div class="card-body">
-            <div class="row">
-                <!-- SECCION 1 -->
-                <div class="col-lg-12 col-sm-6 col-12">
+            <div class="cuenta_cliente">
+                <div class="col-lg-3 col-sm-6 col-12">
                     <div class="form-group">
                         <label>Cuenta Cliente</label>
                         <input type="text" formControlName="cuentaCliente" (input)="transformInputToUppercase($event)"
                             name="cuentaCliente">
                     </div>
                 </div>
-                <!-- SECCION 2 -->
+            </div>
+            <div class="row">
+                <!-- SECCION 1 -->
                 <div class="col-lg-6 col-sm-6 col-12">
                     <div class="form-group">
                         <label>Nombre Cliente</label>
@@ -31,7 +32,7 @@
                         <input type="text" formControlName="ruc">
                     </div>
                 </div>
-                <!-- SECCION 3 -->
+                <!-- SECCION 2 -->
                 <div class="col-lg-6 col-sm-6 col-12">
                     <div class="form-group">
                         <label>Email</label>
@@ -44,7 +45,29 @@
                         <input type="text" formControlName="telefono1">
                     </div>
                 </div>
-                <!-- SECCION SELECT 1 -->
+                <!-- SECCION 3  -->
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Sexo</label>
+                        <input type="text" formControlName="sexo" (input)="transformInputToUppercase($event)"
+                            name="sexo">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Titulo</label>
+                        <input type="text" formControlName="titulo" (input)="transformInputToUppercase($event)"
+                            name="titulo">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Profesion</label>
+                        <input type="text" formControlName="profesion" (input)="transformInputToUppercase($event)"
+                            name="profesion">
+                    </div>
+                </div>
+                <!-- SECCION SELECT PAIS -->
                 <div class="col-lg-3 col-sm-6 col-12">
                     <div class="form-group">
                         <label>Pais</label>
@@ -97,6 +120,29 @@
                         <input type="text">
                     </div>
                 </div>
+                <!-- SECCION  -->
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Representante Legal</label>
+                        <input type="text" formControlName="representanteLegal"
+                            (input)="transformInputToUppercase($event)" name="representanteLegal">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Representante Cedula</label>
+                        <input type="text" formControlName="representanteCedula"
+                            (input)="transformInputToUppercase($event)" name="representanteCedula">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Representante Telefono</label>
+                        <input type="text" formControlName="representanteTelefono"
+                            (input)="transformInputToUppercase($event)" name="representanteTelefono">
+                    </div>
+                </div>
+                <!-- SECCION DE DESCRIPCION -->
                 <div class="col-lg-12">
                     <div class="form-group">
                         <label>Descripcion</label>
