--- a/src/app/core-component/people/editarproveedor/editarproveedor.component.html
+++ b/src/app/core-component/people/editarproveedor/editarproveedor.component.html
@@ -8,23 +8,25 @@
 <form [formGroup]="formularioProveedor">
     <div class="card">
         <div class="card-body">
-            <div class="row">
-                <!-- SECCION 1 -->
-                <div class="col-lg-12 col-sm-6 col-12">
+            <div class="cuenta_cliente">
+                <div class="col-lg-6 col-sm-6 col-12">
                     <div class="form-group">
                         <label>Cuenta Proveedor</label>
                         <input type="text" formControlName="cuentaProveedor" (input)="transformInputToUppercase($event)"
                             name="cuentaCliente">
                     </div>
                 </div>
-                <!-- SECCION 2 -->
-                <div class="col-lg-6 col-sm-6 col-12">
+            </div>
+            <div class="row">
+                <!-- SECCION 1 -->
+                <div class="col-lg-12 col-sm-6 col-12">
                     <div class="form-group">
                         <label>Razon Social</label>
                         <input type="text" formControlName="razonSocial" (input)="transformInputToUppercase($event)"
                             name="razonSocial">
                     </div>
                 </div>
+                <!-- SECCION 2 -->
                 <div class="col-lg-6 col-sm-6 col-12">
                     <div class="form-group">
                         <label>Numero Identificacion</label>
@@ -42,6 +44,28 @@
                     <div class="form-group">
                         <label>Celular</label>
                         <input type="text" formControlName="telefono1">
+                    </div>
+                </div>
+                <!-- SECCION 3  -->
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Sexo</label>
+                        <input type="text" formControlName="sexo" (input)="transformInputToUppercase($event)"
+                            name="sexo">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Titulo</label>
+                        <input type="text" formControlName="titulo" (input)="transformInputToUppercase($event)"
+                            name="titulo">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Profesion</label>
+                        <input type="text" formControlName="profesion" (input)="transformInputToUppercase($event)"
+                            name="profesion">
                     </div>
                 </div>
                 <!-- SECCION SELECT 1 -->
@@ -95,6 +119,27 @@
                     <div class="form-group">
                         <label>Direccion</label>
                         <input type="text">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Representante Legal</label>
+                        <input type="text" formControlName="representanteLegal"
+                            (input)="transformInputToUppercase($event)" name="representanteLegal">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Representante Cedula</label>
+                        <input type="text" formControlName="representanteCedula"
+                            (input)="transformInputToUppercase($event)" name="representanteCedula">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label>Representante Telefono</label>
+                        <input type="text" formControlName="representanteTelefono"
+                            (input)="transformInputToUppercase($event)" name="representanteTelefono">
                     </div>
                 </div>
                 <div class="col-lg-12">
