--- a/src/app/core-component/product/productlist/productlist.component.html
+++ b/src/app/core-component/product/productlist/productlist.component.html
@@ -1,13 +1,12 @@
 <div class="page-header">
   <div class="page-title">
-    <h4>Product List</h4>
-    <h6>Manage your products</h6>
+    <h4>Lista de Productos</h4>
+    <h6>Gestiona tus Productos</h6>
   </div>
   <div class="page-btn">
-    <a [routerLink]="routes.addProduct" class="btn btn-added"
-      ><img src="assets/img/icons/plus.svg" alt="img" class="me-1" />Add New
-      Product</a
-    >
+    <a [routerLink]="routes.addProduct" class="btn btn-added"><img src="assets/img/icons/plus.svg" alt="img"
+        class="me-1" />Crear
+      Productos</a>
   </div>
 </div>
 
@@ -17,74 +16,44 @@
     <div class="table-top">
       <div class="search-set">
         <div class="search-path">
-          <a
-            class="btn btn-filter"
-            (click)="showFilter = !showFilter"
-            [class.setclose]="showFilter == true"
-            id="filter_search"
-          >
-            <img
-              *ngIf="showFilter == false"
-              src="assets/img/icons/filter.svg"
-              alt="img"
-            />
-            <span
-              ><img
-                *ngIf="showFilter == true"
-                    src="assets/img/icons/filter.svg"
-                alt="img"
-            /></span>
+          <a class="btn btn-filter" (click)="showFilter = !showFilter" [class.setclose]="showFilter == true"
+            id="filter_search">
+            <img *ngIf="showFilter == false" src="assets/img/icons/filter.svg" alt="img" />
+            <span><img *ngIf="showFilter == true" src="assets/img/icons/filter.svg" alt="img" /></span>
           </a>
         </div>
         <div class="search-input">
-          <a class="btn btn-searchset"
-            ><img src="assets/img/icons/search-white.svg" alt="img"
-          /></a>
+          <a class="btn btn-searchset"><img src="assets/img/icons/search-white.svg" alt="img" /></a>
           <div class="dataTables_filter">
             <label>
-              <input
-                [(ngModel)]="searchDataValue"
-                (ngModelChange)="searchData(searchDataValue)"
-                type="search"
-                class="form-control"
-                placeholder="Search..."
-              />
+              <input [(ngModel)]="searchDataValue" (ngModelChange)="searchData(searchDataValue)" type="search"
+                class="form-control" placeholder="Search..." />
             </label>
           </div>
         </div>
       </div>
       <div class="wordset">
-        <ul>
+        <!-- <ul>
           <li>
-            <a data-bs-toggle="tooltip" data-bs-placement="top" title="pdf"
-              ><img src="assets/img/icons/pdf.svg" alt="img"
-            /></a>
+            <a data-bs-toggle="tooltip" data-bs-placement="top" title="pdf"><img src="assets/img/icons/pdf.svg"
+                alt="img" /></a>
           </li>
           <li>
-            <a data-bs-toggle="tooltip" data-bs-placement="top" title="excel"
-              ><img src="assets/img/icons/excel.svg" alt="img"
-            /></a>
+            <a data-bs-toggle="tooltip" data-bs-placement="top" title="excel"><img src="assets/img/icons/excel.svg"
+                alt="img" /></a>
           </li>
           <li>
-            <a
-              data-bs-toggle="tooltip"
-              target="_blank"
-              data-bs-placement="top"
-              title="print"
-              ><img src="assets/img/icons/printer.svg" alt="img"
-            /></a>
+            <a data-bs-toggle="tooltip" target="_blank" data-bs-placement="top" title="print"><img
+                src="assets/img/icons/printer.svg" alt="img" /></a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
     <!-- /Filter -->
-    <div
-      class="card mb-0 border-0"
-      [ngClass]="{
+    <!-- <div class="card mb-0 border-0" [ngClass]="{
         'show-sub-menu': showFilter == true,
         'hide-sub-menu': showFilter == false
-      }"
-    >
+      }">
       <div class="card-body p-0">
         <div class="row">
           <div class="col-lg-12 col-sm-12">
@@ -133,27 +102,18 @@
               </div>
               <div class="col-lg-1 col-sm-6 col-12">
                 <div class="form-group">
-                  <a class="btn btn-filters ms-auto"
-                    ><img src="assets/img/icons/search-whites.svg" alt="img"
-                  /></a>
+                  <a class="btn btn-filters ms-auto"><img src="assets/img/icons/search-whites.svg" alt="img" /></a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- /Filter -->
     <div class="table-responsive">
-      <table
-        (matSortChange)="sortData($event)"
-        matSort
-        matSortActive="Sno"
-        matSortDirection="asc"
-        matSortDisableClear
-        class="table"
-        id="printTable"
-      >
+      <table (matSortChange)="sortData($event)" matSort matSortActive="Sno" matSortDirection="asc" matSortDisableClear
+        class="table" id="printTable">
         <thead>
           <tr>
             <th>
@@ -162,14 +122,14 @@
                 <span class="checkmarks"></span>
               </label>
             </th>
-            <th mat-sort-header="ProductName">Product Name</th>
-            <th mat-sort-header="SKU">SKU</th>
-            <th mat-sort-header="Category">Category</th>
+            <th mat-sort-header="Codigo">Codigo</th>
+            <th mat-sort-header="ProductName">Producto</th>
+            <!-- <th mat-sort-header="Category">Category</th>
             <th mat-sort-header="Brand">Brand</th>
             <th mat-sort-header="price">price</th>
             <th mat-sort-header="Unit">Unit</th>
             <th mat-sort-header="Qty">Qty</th>
-            <th mat-sort-header="CreatedBy">Created By</th>
+            <th mat-sort-header="CreatedBy">Created By</th> -->
             <th>Action</th>
           </tr>
         </thead>
@@ -181,44 +141,37 @@
                 <span class="checkmarks"></span>
               </label>
             </td>
+            <td>{{ products.codigo }}</td>
             <td class="productimgname">
-              <a href="javascript:void(0);" class="product-img">
-                <img [src]="products.img" alt="product" />
-              </a>
-              <a href="javascript:void(0);">{{ products.ProductName }}</a>
+              <!-- <a href="javascript:void(0);" class="product-img">
+                <img [src]="products.imagen" alt="product" />
+              </a> -->
+              <a href="javascript:void(0);">{{ products.nombre }}</a>
             </td>
-            <td>{{ products.SKU }}</td>
-            <td>{{ products.Category }}</td>
-            <td>{{ products.Brand }}</td>
-            <td>{{ products.price }}</td>
-            <td>{{ products.Unit }}</td>
-            <td>{{ products.Qty }}</td>
-            <td>{{ products.CreatedBy }}</td>
             <td>
-              <a class="me-3" [routerLink]="routes.productDetails">
+              <a class="me-3" (click)="verProducto(products.id)">
                 <img src="assets/img/icons/eye.svg" alt="img" />
               </a>
-              <a class="me-3" [routerLink]="routes.editProduct">
+              <a class="me-3" (click)="editarProdcuto(products.id)">
                 <img src="assets/img/icons/edit.svg" alt="img" />
               </a>
 
-              <a
-                (click)="deleteBtn()"
-                class="confirm-text"
-                href="javascript:void(0);"
-              >
+              <a (click)="deleteBtn(products.id,i)" class="confirm-text" href="javascript:void(0);">
                 <img src="assets/img/icons/delete.svg" alt="img" />
               </a>
             </td>
           </tr>
           <tr *ngIf="tableData.length === 0">
             <td colspan="12">
-              <h5 class="no-record">No matching records found</h5>
+              <h5 class="no-record">No hay productos</h5>
             </td>
           </tr>
         </tbody>
       </table>
-      <custom-pagination></custom-pagination>
+      <!-- <custom-pagination></custom-pagination> -->
+      <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions" [hidePageSize]="true"
+        (page)="paginate($event)" aria-label="Select page">
+      </mat-paginator>
     </div>
   </div>
 </div>
